--- a/overlay/OPlusSystemUIResTarget/res/values/config.xml
+++ b/overlay/OPlusSystemUIResTarget/res/values/config.xml
@@ -1,51 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!--
-     Copyright (C) 2023 The LineageOS Project
+     Copyright (C) 2023-2024 The LineageOS Project
      SPDX-License-Identifier: Apache-2.0
 -->
 <resources>
 
     <!-- Whether to enable framework dimming for UDFPS -->
     <bool name="config_udfpsFrameworkDimming">true</bool>
-
-    <!-- Array of brightness-alpha LUT for framework dimming -->
-    <string-array name="config_udfpsDimmingBrightnessAlphaArray" translatable="false">
-          <item>0,250</item>
-          <item>1,232</item>
-          <item>2,223</item>
-          <item>6,220</item>
-          <item>7,210</item>
-          <item>8,215</item>
-          <item>10,240</item>
-          <item>15,245</item>
-          <item>17,244</item>
-          <item>20,235</item>
-          <item>24,230</item>
-          <item>27,220</item>
-          <item>31,210</item>
-          <item>35,205</item>
-          <item>39,195</item>
-          <item>45,190</item>
-          <item>47,185</item>
-          <item>51,179</item>
-          <item>56,175</item>
-          <item>60,165</item>
-          <item>71,155</item>
-          <item>80,145</item>
-          <item>90,143</item>
-          <item>96,140</item>
-          <item>107,130</item>
-          <item>121,125</item>
-          <item>136,113</item>
-          <item>149,110</item>
-          <item>176,90</item>
-          <item>190,87</item>
-          <item>255,0</item>
-    </string-array>
-
-    <!-- The amount of delay to add when disabling the dimming.
-         This is used to prevent flickers due to the dimming being disabled
-         before the screen has had chance to switch out of HBM mode -->
-    <integer name="config_udfpsDimmingDisableDelay">35</integer>
 
 </resources>
