--- a/overlay-lineage/packages/apps/Aperture/app/src/main/res/values/config.xml
+++ b/overlay-lineage/packages/apps/Aperture/app/src/main/res/values/config.xml
@@ -7,6 +7,22 @@
     <!-- Enable auxiliary cameras selector. -->
     <bool name="config_enableAuxCameras">true</bool>
 
+    <!-- List of ID of auxiliary cameras that must be ignored by the app. -->
+    <string-array name="config_ignoredAuxCameraIds">
+        <item>0</item>
+        <item>2</item>
+        <item>3</item>
+        <item>4</item>
+    </string-array>
+
+    <!-- Decide whether to ignore auxiliary cameras that
+         are logical (made of multiple physical sensors).
+         Set this to false if your camera HAL doesn't expose
+         one or more aux cameras as a standalone camera device.
+         Note that you will probably need to add
+         more camera IDs to ignoreCameraIds. -->
+    <bool name="config_ignoreLogicalAuxCameras">false</bool>
+
     <!-- An array of triplets made of (camera ID, qualities, framerates).
          These video modes will be added to the available
          quality/framerate combinations of a camera device.
@@ -31,8 +47,32 @@
              </string-array>
     -->
     <string-array name="config_additionalVideoConfigurations">
-        <item>0</item> <item>sd|hd|fhd|uhd</item> <item>60|120</item>
-        <item>1</item> <item>sd|hd|fhd</item>     <item>60</item>
-        <item>2</item> <item>sd|hd|fhd|uhd</item> <item>60</item>
+        <item>1</item> <item>sd|hd|fhd</item>     <item>30|60</item>
+        <item>5</item> <item>sd|hd|fhd|uhd</item> <item>30|60</item>
+    </string-array>
+
+    <!-- An array of triplets made of (camera ID, approximate zoom ratio, exact zoom ratio).
+         These values will be added to the lens selector if one or more cameras uses the
+         multi-camera API to let the user select which lens to use.
+         It's highly recommended to leave config_enableAuxCameras to false, since with
+         multi-camera API you only use a single camera device for all sensors.
+         You may enable it if you need auxiliary camera devices for a set of cameras on one
+         of the device's side (e.g. logical main back camera but multiple physical camera
+         devices on front), in that case if a main device side's lens is referenced here
+         all the auxiliary camera devices of that side will be ignored.
+         You may be able to get the exact zoom ratio needed to trigger the lens switch from
+         your stock camera app and observing the zoom ratio it sets with the following command:
+         adb shell dumpsys media.camera | grep 'android.control.zoomRatio' -1
+         Example for Google Pixel 7 Pro's back camera configuration:
+             <string-array name="config_logicalZoomRatios">
+                 <item>0</item> <item>0.5</item> <item>0.55632502</item>
+                 <item>0</item> <item>2.0</item> <item>2.0</item>
+                 <item>0</item> <item>5.0</item> <item>5.0</item>
+             </string-array>
+    -->
+    <string-array name="config_logicalZoomRatios">
+        <!-- No configuration by default. -->
+        <item>5</item> <item>0.6</item> <item>0.59</item>
+        <item>5</item> <item>3.0</item> <item>3.0</item>
     </string-array>
 </resources>
