--- a/overlay/OPlusSystemUIResTarget/res/values/dimens.xml
+++ b/overlay/OPlusSystemUIResTarget/res/values/dimens.xml
@@ -13,13 +13,13 @@
     <item name="pixel_pitch" format="float" type="dimen">56.5</item>
 
     <!-- the padding on the start of the statusbar -->
-    <dimen name="status_bar_padding_start">30px</dimen>
+    <dimen name="status_bar_padding_start">72px</dimen>
 
     <!-- the padding on the end of the statusbar -->
     <dimen name="status_bar_padding_end">16px</dimen>
 
     <!-- the padding on the top of the statusbar (usually 0) -->
-    <dimen name="status_bar_padding_top">16px</dimen>
+    <dimen name="status_bar_padding_top">20px</dimen>
 
     <!-- Height of the status bar header bar when on Keyguard -->
     <dimen name="status_bar_header_height_keyguard">@*android:dimen/status_bar_height</dimen>
@@ -29,5 +29,8 @@
 
     <!-- Location on the screen of the center of the physical power button. -->
     <dimen name="physical_power_button_center_screen_location_y">1130px</dimen>
+
+    <!-- The width/height of the unlock icon view on keyguard. -->
+    <dimen name="keyguard_indication_margin_bottom">160dp</dimen>
 
 </resources>
